apps/dtopsky/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dtopsky
  namespace: dtopsky    # <-- tu
  labels:
    app: dtopsky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dtopsky
  template:
    metadata:
      labels:
        app: dtopsky
    spec:
      containers:
        - name: dtopsky
          image: harbor.zatto-lab.cloud/d-topsky/d-topsky:0.0.82
          ports:
            - containerPort: 8000
