apps/dtopsky/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dtopsky
  labels:
    app: dtopsky
spec:
  type: NodePort
  selector:
    app: dtopsky
  ports:
    - name: http
      protocol: TCP
      port: 80           # port w klastrze
      targetPort: 8000   # port w kontenerze
      nodePort: 31213    # port na hoście (zewnętrzny)
