apps/dtopsky/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dtopsky-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - dtopsky.topsky.app
      secretName: dtopsky-tls
  rules:
    - host: dtopsky.topsky.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dtopsky
                port:
                  number: 8000
